# rootana

./: .Dockerfile  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  Doxygen.cxx  Globals.h  HttpOdb.cxx  HttpOdb.h  Makefile  NMakefile  README.md  TMidasEvent.cxx  TMidasEvent.h  TMidasFile.cxx  TMidasFile.h  TMidasOnline.cxx  TMidasOnline.h  VirtualOdb.h  XmlOdb.cxx  XmlOdb.h  analyzer.cxx  bitbucket-pipelines.yml  doc.cxx  event_dump.cxx  event_skim.cxx  midasServer.cxx  midasServer.h  rootana-config.cmake.in  rootana_config.h.in  testODB.cxx  test_midasServer.cxx  thisrootana.csh  thisrootana.sh
examples/: Makefile  README.txt  TAgilentHistogram.cxx  TAnaManager.cxx  TAnaManager.hxx  TCamacADCHistogram.cxx  TDT724Waveform.cxx  TL2249Histogram.cxx  TTRB3Histogram.cxx  TTRB3Histogram.hxx  TV1190Histogram.cxx  TV1720Correlations.cxx  TV1720Correlations.h  TV1720Waveform.cxx  TV1730DppWaveform.cxx  TV1730RawWaveform.cxx  TV792Histogram.cxx  ana.cxx  anaDisplay.cxx  midas2root_alt.cxx
examples/html/: generic_rootana_setup.json  generic_webdisplay.html  generic_webdisplay_embed.html  generic_webdisplay_v2.html  plotting_functions_jsroot.js  plotting_functions_nonroot.js  rootana_functions.js  rootana_functions.js~  rootana_functions_jsroot.js  v792_page.html  v792_page.html~
libAnalyzer/: CMakeLists.txt  Makefile  Makefile.old  TCamacADCData.cxx  TCamacADCData.hxx  TDT724RawData.hxx  TDataContainer.hxx  TGenericData.hxx  THistogramArrayBase.h  TPeriodicClass.hxx  TRB3Decoder.cxx  TRB3Decoder.hxx  TRootanaEventLoop.cxx  TRootanaEventLoop.hxx  TTRB3Data.cxx  TTRB3Data.hxx  TV1190Data.cxx  TV1730DppData.hxx  TV1730RawData.cxx  TV1730RawData.hxx  TV792Data.cxx  TV792Data.hxx  TV792NData.cxx  TV792NData.hxx  analyzer_example.cxx
libAnalyzerDisplay/: CMakeLists.txt  Makefile  Makefile.old  TCanvasHandleBase.hxx  TComplicatedExampleCanvas.cxx  TComplicatedExampleCanvas.hxx  TFancyHistogramCanvas.cxx  TFancyHistogramCanvas.hxx  THistogramArrayBase.cxx  THistogramArrayBase.h  TInterestingEventManager.cxx  TInterestingEventManager.hxx  TMainDisplayWindow.cxx  TMainDisplayWindow.hxx  TMulticanvas.cxx  TMulticanvas.h  TRootanaDisplay.cxx  TRootanaDisplay.hxx  TSimpleExampleCanvas.cxx  TSimpleExampleCanvas.hxx  TSimpleHistogramCanvas.cxx  TSimpleHistogramCanvas.hxx  displayDoc.cxx  display_example.cxx
libMidasInterface/: Makefile  Makefile.old  TMidasEvent.cxx  TMidasEvent.h  TMidasFile.cxx  TMidasFile.h  TMidasOnline.cxx  TMidasOnline.h  TMidasStructs.h  VirtualOdb.h  XmlOdb.cxx  XmlOdb.h  manalyzer.cxx  manalyzer.h  manalyzer_example1.cxx  manalyzer_example2.cxx  manalyzer_example3.cxx  manalyzer_main.cxx  midasio.cxx  midasio.h  midasodb.cxx  mjson.cxx  mjson.h  mjsonodb.cxx  mvodb.cxx  mvodb.h  mxml.cxx  mxmlodb.cxx  nullodb.cxx
libMidasInterface/tests/: CMakeLists.txt  odb.json  testODB.cxx  test_mvodb.cxx  test_mvodb.xml
libMidasServer/: CMakeLists.txt
libNetDirectory/: Makefile  TNetDirectory.cxx  TNetDirectory.h  TNetDirectoryDict.h  TNetDirectory_LinkDef.h  netDirectoryServer.cxx  netDirectoryServer.h
libUnpack/: UnpackVF48A.cxx  UnpackVF48A.h  v1190unpack.cxx  v1190unpack.h  v1742unpack.cxx  v1742unpack.h
libXmlServer/: xmlServer.cxx
manalyzer/: CMakeLists.txt  Makefile  README.md  manalyzer.cxx  manalyzer.h  manalyzer_example2.cxx  manalyzer_example3.cxx  manalyzer_example_cxx.cxx  manalyzer_example_flow.cxx  manalyzer_example_flow_queue.cxx  manalyzer_example_root.cxx  manalyzer_example_root_graphics.cxx  manalyzer_main.cxx  manalyzer_v0.h
obsolete/: midasServer.cxx
old_analyzer/: CMakeLists.txt  Globals.h  analyzer.cxx  event_dump.cxx  event_skim.cxx
tests/: test_midasServer.cxx
